sweet: parts: Implement dc dimming
Squash of the following commits:
- parts: Move dc dimming to Settings > Display
- parts: Implement dc dimming preference
- parts: Disable dc dimming if it's not supported
- parts: Add DC-Dimming QS tile
- sepolicy: Address DC Dimming denial

Co-authored-by: Arian <arian.kulmer@web.de>
Change-Id: I048371e23c68eae199b429169866af864cc03daf
Signed-off-by: rockstar5495 <pratyakshom.05@gmail.com>
Signed-off-by: Pratyaksh Bharadwaj <pratyakshom.05@gmail.com>

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -1067,3 +1067,8 @@ service nv_mac /vendor/bin/nv_mac
     user system
     group system inet net_admin wifi net_raw
     oneshot
+
+on boot
+    # Allow system to modify exposure adjustment state
+    chown system system /sys/devices/platform/soc/soc:qcom,dsi-display/msm_fb_ea_enable
+    chmod 0660 /sys/devices/platform/soc/soc:qcom,dsi-display/msm_fb_ea_enable
