--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -387,3 +387,7 @@ on property:persist.sys.mcc.mnc=*
 # FPS Info
     chown system graphics /sys/class/drm/sde-crtc-0/measured_fps
     chmod 0666 /sys/class/drm/sde-crtc-0/measured_fps
+
+# Restrict permissions to socket file 
+# to hide Magisk & co.
+    chmod 440 /proc/net/unix
