--- a/parts/AndroidManifest.xml
+++ b/parts/AndroidManifest.xml
@@ -37,6 +37,26 @@
                 android:resource="@string/device_settings_summary" />
         </activity>
 
+        <service
+            android:name=".display.HbmTileService"
+            android:icon="@drawable/ic_hbm"
+            android:label="@string/lcd_hbm_tile_title"
+            android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
+            <intent-filter>
+                <action android:name="android.service.quicksettings.action.QS_TILE"/>
+            </intent-filter>
+        </service>
+
+        <service
+            android:name=".display.CabcTileService"
+            android:icon="@drawable/ic_cabc"
+            android:label="@string/lcd_cabc_title"
+            android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
+            <intent-filter>
+                <action android:name="android.service.quicksettings.action.QS_TILE"/>
+            </intent-filter>
+        </service>
+
         <activity
             android:name=".dirac.DiracActivity"
             android:label="@string/dirac_title"
@@ -59,4 +79,3 @@
         </activity>
     </application>
 </manifest>
-
