sweet: parts: adapt to S style
* Use Theme.SubSettingsBase for theme
* Replace PreferenceActivity with CollapsingToolbarBaseActivity
* Make use of MainSwitchPreference

Change-Id: I042ea29f7c99f91b08d0aea4aec9c8077e0d7a2a
Signed-off-by: Pratyaksh Bharadwaj <pratyakshom.05@gmail.com>

--- a/parts/AndroidManifest.xml
+++ b/parts/AndroidManifest.xml
@@ -25,8 +25,8 @@
             android:name=".MainSettingsActivity"
             android:label="@string/device_settings_title"
             android:icon="@drawable/ic_main_settings"
-	    android:exported="true"
-            android:theme="@android:style/Theme.DeviceDefault.Settings">
+            android:exported="true"
+            android:theme="@style/Theme.SubSettingsBase">
             <intent-filter>
                 <action android:name="com.android.settings.action.IA_SETTINGS" />
             </intent-filter>
@@ -61,8 +61,8 @@
         <activity
             android:name=".dirac.DiracActivity"
             android:label="@string/dirac_title"
-	    android:exported="true"
-            android:theme="@android:style/Theme.DeviceDefault.Settings">
+            android:exported="true"
+            android:theme="@style/Theme.SubSettingsBase">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -73,7 +73,7 @@
             android:name=".speaker.ClearSpeakerActivity" 
             android:label="@string/clear_speaker_title"
 	    android:exported="true"
-            android:theme="@style/Theme.Main">
+            android:theme="@style/Theme.SubSettigsBase">
             <intent-filter>
                 <action android:name="com.android.settings.action.IA_SETTINGS" />
             </intent-filter>
