sweet: rebrand devicesettings to parts
Signed-off-by: Pratyaksh Bharadwaj <pratyakshom.05@gmail.com>

--- a/parts/AndroidManifest.xml
+++ b/parts/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.lineageos.settings.device"
+    package="org.lineageos.settings"
     android:versionCode="3"
     android:versionName="3.0"
     android:sharedUserId="android.uid.system">
@@ -14,7 +14,7 @@
         android:label="@string/device_settings_title"
         android:persistent="true">
 
-        <receiver android:name="org.lineageos.settings.device.BootCompletedReceiver">
+        <receiver android:name="org.lineageos.settings.BootCompletedReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
                 <category android:name="android.intent.category.DEFAULT" />
