mido: Add support for battery life saver * 1. Added overlay for Battery Life saver * 2. Added permissions for Battery Life saver
Signed-off-by: Pratyaksh Bharadwaj <pratyakshom.05@gmail.com>

--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -388,3 +388,13 @@ on property:persist.sys.mcc.mnc=*
 # Restrict permissions to socket file 
 # to hide Magisk & co.
     chmod 440 /proc/net/unix
+
+# Battery life saver
+on boot
+   chown system system /sys/class/power_supply/battery/battery_charging_enabled
+   chmod 0666 /sys/class/power_supply/battery/battery_charging_enabled
+   chown system system /sys/class/power_supply/battery/capacity
+   chmod 0666 /sys/class/power_supply/battery/capacity
+   chown system system /sys/class/power_supply/battery/temp
+   chmod 0666 /sys/class/power_supply/battery/temp
+
