--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -421,3 +421,6 @@ on property:sys.boot_completed=1
     stop boot_log
     stop boot_log_crash
     stop boot_log_kernel
+
+on property:persist.vendor.radio.port_index=""
+    setprop sys.usb.config adb
