--- a/parts/AndroidManifest.xml
+++ b/parts/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:label="@string/device_settings_title"
         android:persistent="true">
 
-        <receiver android:name="org.lineageos.settings.BootCompletedReceiver">
+        <receiver android:name="org.lineageos.settings.BootCompletedReceiver" android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -25,6 +25,7 @@
             android:name=".MainSettingsActivity"
             android:label="@string/device_settings_title"
             android:icon="@drawable/ic_main_settings"
+	    android:exported="true"
             android:theme="@style/Theme.Main">
             <intent-filter>
                 <action android:name="com.android.settings.action.IA_SETTINGS" />
@@ -60,6 +61,7 @@
         <activity
             android:name=".dirac.DiracActivity"
             android:label="@string/dirac_title"
+	    android:exported="true"
             android:theme="@style/Theme.Main">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -70,6 +72,7 @@
         <activity
             android:name=".speaker.ClearSpeakerActivity" 
             android:label="@string/clear_speaker_title"
+	    android:exported="true"
             android:theme="@style/Theme.Main">
             <intent-filter>
                 <action android:name="com.android.settings.action.IA_SETTINGS" />
